# man

./: .env.example  .gitignore  LOGIN_OCTOPUS_GALACEAN_MIGRATION.md  README.md  docker-compose.yml  octopus.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_ai_models_table.py  002_create_users_table.py  003_create_presets_and_outlines.py
backend/app/: __init__.py  main.py
backend/app/api/: ai_models.py  assets.py  auth.py  chapters.py  export.py  generation.py  presets.py  projects.py  stories.py  story_bible.py  storyboard.py  users.py
backend/app/core/: celery.py  config.py  database.py  encryption.py  security.py
backend/app/models/: __init__.py  ai_model.py  asset.py  chapter.py  preset.py  project.py  story_bible.py  story_outline.py  user.py
backend/app/schemas/: __init__.py  ai_model.py  asset.py  chapter.py  preset.py  project.py  story.py  story_bible.py  storyboard.py  user.py
backend/app/services/: ai_model_service.py
backend/app/services/ai/: __init__.py  base.py  claude_adapter.py  comfyui_adapter.py  factory.py  midjourney_adapter.py  openai_adapter.py  sd_adapter.py
backend/app/services/pipeline/: __init__.py  chapter_plan.py  consistency.py  image_gen.py  layout.py  panel_script.py  story_bible.py  story_expand.py
doc/: ENCRYPTION_KEY 重置指南.md  启动步骤.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: OctopusAnimator  Scene  body-copied  eye-copied  octopus.glb
frontend/src/: App.tsx  context.tsx  index.css  routes.ts
frontend/src/components/: AuthGuard.tsx
(+63 files in other folders)
